--- a/writing/cogsci2018/cogsci2018.tex
+++ b/writing/cogsci2018/cogsci2018.tex
@@ -584,6 +584,14 @@ there was minimum social pressure. On the other hand, the
 in the presentation condition, with high social pressure to present
 competence, compared to other conditions.
 
+We also inferred another parameter of the cognitive model, the
+optimality parameter \(\lambda\). We put uninformative prior on the
+parameter (\(\lambda \sim Uniform(0,10)\) and inferred its posterior
+credible value from the data. We ran 4 MCMC chains for 100,000
+iterations, discarding the first 50,000 for burnin. The Maximum A-
+Posteriori (MAP) estimate and 95\% Highest Probability Density Interval
+(HDI) for \(\lambda\) was 4.79 {[}3.96, 6.2{]}.
+
 The predictions of the action choices according to the fitted learner
 model are shown in Figure 3, panel A (bottom). The model's expected
 posteriors over action choices capture key differences between
