--- a/writing/cogsci2018/cogsci2018.Rmd
+++ b/writing/cogsci2018/cogsci2018.Rmd
@@ -8,7 +8,7 @@ author-information: >
     \author{{\large \bf Erica J. Yoon*}, {\large \bf Kyle MacDonald*}, {\large \bf Mika Asaba}, {\large \bf Hyowon Gweon}, \and {\large \bf Michael C. Frank} \\ \{ejyoon, kylem4, masaba, hyo, mcfrank\} @stanford.edu \\ Department of Psychology, Stanford University \\ *These authors contributed equally to this work.}
 
 abstract: 
-    "Our actions shape what we learn. Empirical and theoretical work shows that people are capable of efficient self-directed learning to maximize informational goals. But a fundamental feature of human learning is that it unfolds within a social context. How can we begin to understand the role of social factors in self-directed learning? Here, we present a computational model that integrates the value of social and information goals to predict the decisions that people will make in a simple active causal learning task. We show that emphasizing performance or self-presentation goals leads to actions that reduce the chances of learning (E1). Next, we show that the presence of an observer (i.e., a boss) pushes learners to emphasize performance/presentation actions even when emphasis is placed on a learning goal (E2). Our formal model of social-active learning successfully captured key patterns in the empirical results. These findings represent an important first step towards integrating active learning with social reasoning."
+    "Our actions shape what we learn. Recent work suggests that people engage in efficient self-directed learning to maximize information gain. However, human learning often unfolds in social contexts where learners not only face informational goals (e.g. learn how something works) but also social goals (e.g. appear competent and impress others). How do these factors shape learners' decisions? Here, we present a computational model that integrates the value of social and information goals to predict the decisions that people will make in a simple active causal learning task. We show that an emphasis on performance or self-presentation goals leads to reduced chances of learning (E1). Next, we show that social context can push learners to pursue performance-oriented actions even when the learning goal is highlighted (E2). Our formal model of social-active learning successfully captures the empirical results. These findings are the first steps towards understanding the role of social reasoning in active learning contexts."
     
 keywords:
     "active learning; social reasoning; information gain; OED; self-presentation; goal tradeoffs"
@@ -42,9 +42,11 @@ d_model_spec <- readRDS(here("data/03_merged_data/soc-info-models.rds"))
 
 Imagine that you are a novice cook and you have to decide what meal to prepare for a first date. Should you choose an easy favorite or should you attempt to make something new? While the familiar recipe has a high chance of ensuring a good meal, you are less likely to discover a new, delicious dish. The new recipe might taste even better, but it has a higher chance of failure. But perhaps this decision would change if you were cooking for a friend or teacher who could help or give feedback.
 
-Scenarios like this one capture an "explore-exploit” dilemma [@sutton1998], in which we have to choose between actions that could (a) lead to an overt, readily accessible reward based on what we already know (*exploitation*) or (b) result in the discovery of new information (*exploration*). This decision of whether to explore or exploit is directly related to the relative strength of our goals within a particular context. In the cooking example, should I prioritize the goal of learning by cooking the new recipe, or should I emphasize the performance goal by preparing the tried and true meal? Here, we explore the idea that features of the social context affect the goals we consider, and hence can be translated into this same framework. We present a formal account integrating social reasoning processes with decision making in a simple explore-exploit dilemma.
+We often have to choose between *exploration* and *exploitation*: that is, actions that could (a) lead to an overt, readily accessible reward based on what we already know (*exploitation*) or (b) result in the discovery of new information (*exploration*; @sutton1998). This decision of whether to explore or exploit is directly related to the relative strength of the goals within a particular context. In the cooking example, I can prioritize the goal of learning by cooking the new recipe, or I can instead emphasize the performance goal by preparing the tried and true meal. 
+Here, we explore the idea of this goal tradeoff in a simple active learning context, where social factors may affect the goals we consider.
 
-We situate our integrative account within two theoretical frameworks: *active learning* and *pragmatic social reasoning*. Active learning refers to situations where people are given control over the sequence of information in a learning context (e.g., verbal question asking to elicit informative responses). The key assumption is that learners will maximize the usefulness of their actions by gathering information that is especially helpful for their own learning. The effects of active learning have been the focus of much empirical work in education [@grabinger1995rich], machine learning [@settles2012active], and cognitive psychology [@castro2009human], with the common finding that active contexts lead to more rapid learning when compared to passive contexts where people do not have control over the flow of information. 
+We present a formal account of social-active learning, and situate it within two theoretical frameworks: *active learning* and *pragmatic social reasoning*. 
+Active learning refers to situations where people are given control over the sequence of information in a learning context (e.g. try pressing different buttons on a toy, one by one, to see whether it produces an effect). The key assumption is that learners will maximize the usefulness of their actions by gathering information that is especially helpful for their own learning. The effects of active learning have been the focus of much empirical work in education [@grabinger1995rich], machine learning [@settles2012active], and cognitive psychology [@castro2009human], with the common finding that active contexts lead to more rapid learning when compared to passive contexts where people do not have control over the flow of information. 
 
 ```{r model_diagram, include = T, fig.env = "figure*", fig.pos = "tb", fig.width=5, fig.asp = 0.7, out.width= "95%", fig.align='center', fig.cap = "Diagram of the computational model: The learner considers possible hypotheses and his contextual goals. When an observer is absent, he considers his learning goal (to maximize information gain) and performance goal (e.g. to play music) and decides on an action. When an observer is present, his decision for an action is based on his learning goal vs. presentational goal (to have the observer infer his competence)."}
 img1 <- rasterGrob(as.raster(readPNG(here(image_path, "model-obsAbs.png"))), 
@@ -56,11 +58,11 @@ img2 <- rasterGrob(as.raster(readPNG(here(image_path, "model-obsPres.png"))),
 grid.arrange(img1, img2, ncol = 2)
 ```
 
-Work on exploratory actions in active learning often isolates information goals by removing the learner from any kind of social context. In contrast, real-world learning is characterized by situations where there are teachers, peer learners, or other individuals who can directly influence the utility of information gathering actions. In fact, a large body of evidence suggests that social reasoning processes shapes how we learn from evidence. For example, children learn faster when observing intentional (more informative) actions compared to accidental (less informative) actions. Moreover, adults and children will make even stronger inferences if they believe that another person selected their actions with the goal of helping them learn (i.e., teaching) [@shafto2012learning]. 
+Real-world learning is characterized by situations where there are teachers, peer learners, or other individuals who can directly influence the utility of information gathering actions. In fact, a large body of evidence suggests that social reasoning processes shapes how we learn from evidence. For example, children learn faster when observing intentional (more informative) actions compared to accidental (less informative) actions. Moreover, adults and children will make even stronger inferences if they believe that another person selected their actions with the goal of helping them learn (i.e., teaching) [@shafto2012learning]. 
 
-Models of active learning are not typically able to accommodate these richer inferences and richer utility structures where people must integrate the value of social goals -- looking competent or knowledgeable, for example -- and information goals when deciding what to do next. Moreover, actions that maximize learning are inherently risky, and thus are more difficult to undertake in with someone else present. How can active learning models be modified to accommodate this richer set of utilities? As a step towards answering this question, we model a learner who considers a mixture of learning and performance goals. We assume that these goals are triggered by features of the social context such as the presence of another individual whom we want to impress. 
+Models of active learning are not typically able to accommodate these richer inferences and richer utility structures where people must integrate the value of social goals -- looking competent or knowledgeable, for example -- and information goals when deciding what to do next. Moreover, actions that maximize learning are inherently risky, and thus may be more difficult to undertake in with someone else present. How can active learning models be modified to accommodate this richer set of utilities? As a step towards answering this question, we model a learner who considers a mixture of learning and performance goals. We assume that these goals result from features of the social context such as the presence of another individual whom we want to impress. 
 
-We instantiate the predictions of our model in a simple causal learning task and measure adults’ decisions about whether to take actions that support learning vs. social goals. We show that emphasizing performance or self-presentation goals leads to actions that reduce the chances of learning (E1). Next, we show that the presence of an observer (i.e., a boss) pushes learners to emphasize performance/presentation actions even when emphasis is placed on a learning goal (E2). Finally, we present Bayesian Data Analysis showing that the empirical results are consistent with predictions of our cognitive model of social-active learning.
+We instantiate the predictions of our model in a simple causal learning task and measure people’s decisions about whether to take actions that support learning vs. social goals. We show that emphasizing performance or self-presentation goals leads to actions that are not informative and thus reduce the chances of learning (E1). Next, we show that the presence of an observer (i.e., a boss) pushes learners to pursue performance/presentation actions even when the learning goal is highlighted (E2). Finally, we present a Bayesian Data Analysis showing that the empirical results are consistent with predictions of our cognitive model of social-active learning.
 
 # Computational model
 
